syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel) ;
  rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel) ;
  rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel) ;
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse) ;


}
//When finished right click these file then change build action to protobuf compiler and grpc stub class to server only
message CouponModel {
	 int32 Id =1;
	 string ProductName =2;
	 string Description =3;
	 int32 Amount=4;
}

message GetDiscountRequest {
  string productName = 1;
}
message CreateDiscountRequest {
 CouponModel coupon =1;
}
message UpdateDiscountRequest {
 CouponModel coupon =1;
}
message DeleteDiscountRequest {
  string productName = 1;
}
message DeleteDiscountResponse {
  string success = 1;
}




